style music section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/426cc04b7a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Dat Boi Saliou</title>
 </head>
 
@@ -28,7 +28,7 @@
             <ul class="nav-left">
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-spotify"></i></i></a></li>
+                <li><a href="#"><i class="fab fa-spotify"></i></a></li>
                 <li><a href="#"><i class="fab fa-bandcamp"></i></a></li>
                 <li><a href="#"><i class="fab fa-apple"></i></a></li>
                 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
@@ -41,21 +41,42 @@
     </section>
     <section id="music">
         <h2 class="music__heading">
-                Latest Releases
-            </h2>
-            <div class="music__grid">
-               <div class="album">
-                   <img src="assets/coffee-weed-socks.jpg" class="album__cover">
-                   <div class="album__overlay">
-                       <h2 class="album__overlay-heading">Coffee, Weed, Socks</h2>
-                   </div>
-               </div>
-               <div class="album">
-                   <img src="assets/law-of-attraction.jpg" class="album__cover">
-                   <div class="album__overlay">
-                    <h2 class="album__overlay-heading">Law of Attraction</h2>
-                   </div>
-               </div>
+            Latest Releases
+        </h2>
+        <div class="music__grid">
+            <div class="album">
+                <img src="assets/coffee-weed-socks.jpg" class="album__cover">
+                <div class="album__info">
+                    <h2 class="album__heading">Coffee, Weed, Socks</h2>
+                    <div class="album__links">
+                        <a href="#"><i class="fab fa-apple"></i></a>
+                        <a href="#"><i class="fab fa-spotify"></i></a>
+                        <a href="#"><i class="fab fa-bandcamp"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="album">
+                <img src="assets/flutie-flakes.jpg" class="album__cover">
+                <div class="album__info">
+                    <h2 class="album__heading">Coffee, Weed, Socks</h2>
+                    <div class="album__links">
+                        <a href="#"><i class="fab fa-apple"></i></a>
+                        <a href="#"><i class="fab fa-spotify"></i></a>
+                        <a href="#"><i class="fab fa-bandcamp"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="album">
+                <img src="assets/law-of-attraction.jpg" class="album__cover">
+                <div class="album__info">
+                    <h2 class="album__heading">Law of Attraction</h2>
+                    <div class="album__links">
+                        <a href="#"><i class="fab fa-apple"></i></a>
+                        <a href="#"><i class="fab fa-spotify"></i></a>
+                        <a href="#"><i class="fab fa-bandcamp"></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="videos"></section>
