add box to over video on youtube

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="landing__header">
             <div class="landing__content">
                 <h1 class="landing__h1">Saliou M'boup</h1>
-                <p class="landing__p">New EP Out Now</p>
+                <p class="landing__p">EP Out Now</p>
                 <a href="#" class="landing__btn">Listen</a>
             </div>
         </header>
@@ -79,7 +79,22 @@
             </div>
         </div>
     </section>
-    <section id="videos"></section>
+    <section id="videos">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8q2CMCbJuJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-info">
+                <h1>Blunt</h1>
+                <a href="#">Watch Now</a>
+            </div>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wt4T1kZQPh8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-info">
+                <h1>Blunt</h1>
+                <a href="#">Watch Now</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
