--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
     </section>
     <section id="videos">
         <div class="video-container">
-            <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/8q2CMCbJuJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
             <img src="assets/sal-video.gif" class="video-gif">
             <div class="video-info">
                 <h1>Blunt</h1>
@@ -94,10 +93,14 @@
             </div>
         </div>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wt4T1kZQPh8"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+          <img src="assets/law-of-attraction-clip.gif" class="video-gif">
+            <div class="video-info">
+                <h1>Blunt</h1>
+                <a href="#">Watch Now</a>
+            </div>
+        </div>
+        <div class="video-container">
+          <img src="assets/sal-live.gif" class="video-gif">
             <div class="video-info">
                 <h1>Blunt</h1>
                 <a href="#">Watch Now</a>
