change width of video info element to be the same add some links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
             <ul class="nav-right">
                 <li><a href="#music">Music</a></li>
-                <li><a href="#">Videos</a></li>
+                <li><a href="#videos">Videos</a></li>
             </ul>
         </nav>
     </section>
@@ -85,25 +85,26 @@
         </div>
     </section>
     <section id="videos">
+        <h2 class="video-heading">Videos</h2>
         <div class="video-container">
             <img src="assets/sal-video.gif" class="video-gif">
             <div class="video-info">
-                <h1>Blunt</h1>
-                <a href="#">Watch Now</a>
+                <h2>Blunt</h2>
+                <a href="https://www.youtube.com/watch?v=8q2CMCbJuJU">Watch Now</a>
             </div>
         </div>
         <div class="video-container">
           <img src="assets/law-of-attraction-clip.gif" class="video-gif">
             <div class="video-info">
-                <h1>Blunt</h1>
-                <a href="#">Watch Now</a>
+                <h2>Law of Attraction</h2>
+                <a href="https://www.youtube.com/watch?v=bi4KEKZLOy0">Watch Now</a>
             </div>
         </div>
         <div class="video-container">
           <img src="assets/sal-live.gif" class="video-gif">
             <div class="video-info">
-                <h1>Blunt</h1>
-                <a href="#">Watch Now</a>
+                <h2>Pouring Rays Live</h2>
+                <a href="https://www.youtube.com/watch?v=NdxJUfoyF7E">Watch Now</a>
             </div>
         </div>
     </section>
