--- a/index.html
+++ b/index.html
@@ -89,22 +89,28 @@
         <div class="video-container">
             <img src="assets/sal-video.gif" class="video-gif">
             <div class="video-info">
-                <h2>Blunt</h2>
-                <a href="https://www.youtube.com/watch?v=8q2CMCbJuJU">Watch Now</a>
+                <div class="video-info-container">
+                    <h2>Blunt</h2>
+                    <a href="https://www.youtube.com/watch?v=8q2CMCbJuJU">Watch Now</a>
+                </div>
             </div>
         </div>
         <div class="video-container">
-          <img src="assets/law-of-attraction-clip.gif" class="video-gif">
+            <img src="assets/law-of-attraction-clip.gif" class="video-gif">
             <div class="video-info">
-                <h2>Law of Attraction</h2>
-                <a href="https://www.youtube.com/watch?v=bi4KEKZLOy0">Watch Now</a>
+                <div class="video-info-container">
+                    <h2>Law of Attraction</h2>
+                    <a href="https://www.youtube.com/watch?v=bi4KEKZLOy0">Watch Now</a>
+                </div>
             </div>
         </div>
         <div class="video-container">
-          <img src="assets/sal-live.gif" class="video-gif">
+            <img src="assets/sal-live.gif" class="video-gif">
             <div class="video-info">
-                <h2>Pouring Rays Live</h2>
-                <a href="https://www.youtube.com/watch?v=NdxJUfoyF7E">Watch Now</a>
+                <div class="video-info-container">
+                    <h2>Pouring Rays Live</h2>
+                    <a href="https://www.youtube.com/watch?v=NdxJUfoyF7E">Watch Now</a>
+                </div>
             </div>
         </div>
     </section>
