add links and background image to boat sal

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
             <div class="landing__content">
                 <h1 class="landing__h1">Saliou M'boup</h1>
                 <p class="landing__p">EP Out Now</p>
-                <a href="#" class="landing__btn">Listen</a>
+                <a href="https://open.spotify.com/album/4pcuf63zlyWK75UkWvC8qg?si=wmOifPHgS3yCNjKh-5NTyQ" class="landing__btn">Listen</a>
             </div>
         </header>
         <nav class="navbar">
             <ul class="nav-left">
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-spotify"></i></a></li>
-                <li><a href="#"><i class="fab fa-bandcamp"></i></a></li>
-                <li><a href="#"><i class="fab fa-apple"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/sal_ee_uu/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://twitter.com/Sal_ee_uu"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://open.spotify.com/artist/5wY8BUyFV08oCTs2JaswgI?si=tKus0FymRJiLx86wk9mfqw"><i class="fab fa-spotify"></i></a></li>
+                <li><a href="https://datboisaliou.bandcamp.com/"><i class="fab fa-bandcamp"></i></a></li>
+                <li><a href="https://music.apple.com/us/artist/saliou-mboup/1538379190?l"><i class="fab fa-apple"></i></a></li>
+                <li><a href="https://www.youtube.com/user/TheThirdPixel"><i class="fab fa-youtube"></i></a></li>
             </ul>
             <ul class="nav-right">
                 <li><a href="#music">Music</a></li>
@@ -50,53 +50,53 @@
         </h2>
         <div class="music__grid">
             <div class="album">
-                <img src="assets/coffee-weed-socks.jpg" class="album__cover">
+                <img src="assets/coffee-weed-socks.jpg" class="album__cover" alt="coffee weed socks">
                 <div class="album__info">
                     <h2 class="album__heading">Coffee, Weed, Socks</h2>
                     <div class="album__links">
-                        <a href="#"><i class="fab fa-apple"></i></a>
-                        <a href="#"><i class="fab fa-spotify"></i></a>
-                        <a href="#"><i class="fab fa-bandcamp"></i></a>
+                        <a href="https://music.apple.com/us/album/coffee-socks-weed-acoustic-ep/1519574225"><i class="fab fa-apple"></i></a>
+                        <a href="https://open.spotify.com/album/4pcuf63zlyWK75UkWvC8qg?si=wmOifPHgS3yCNjKh-5NTyQ"><i class="fab fa-spotify"></i></a>
+                        <a href="https://datboisaliou.bandcamp.com/album/coffee-socks-weed-bedroom-acoustic"><i class="fab fa-bandcamp"></i></a>
                     </div>
                 </div>
             </div>
             <div class="album">
-                <img src="assets/flutie-flakes.jpg" class="album__cover">
+                <img src="assets/flutie-flakes.jpg" class="album__cover" alt="flutie">
                 <div class="album__info">
-                    <h2 class="album__heading">Coffee, Weed, Socks</h2>
+                    <h2 class="album__heading">Thug Flutie</h2>
                     <div class="album__links">
-                        <a href="#"><i class="fab fa-apple"></i></a>
-                        <a href="#"><i class="fab fa-spotify"></i></a>
-                        <a href="#"><i class="fab fa-bandcamp"></i></a>
+                        <a href="https://music.apple.com/us/album/thug-flutie-single/1550319578"><i class="fab fa-apple"></i></a>
+                        <a href="https://open.spotify.com/album/7bb5EXysnLDiW9df9zHrOt?si=1a76U9S8TUiwZbbp_lE_6Q"><i class="fab fa-spotify"></i></a>
+                        <a href="https://datboisaliou.bandcamp.com/track/thug-flutie"><i class="fab fa-bandcamp"></i></a>
                     </div>
                 </div>
             </div>
             <div class="album">
-                <img src="assets/law-of-attraction.jpg" class="album__cover">
+                <img src="assets/law-of-attraction.jpg" class="album__cover" alt="law of attraction">
                 <div class="album__info">
                     <h2 class="album__heading">Law of Attraction</h2>
                     <div class="album__links">
-                        <a href="#"><i class="fab fa-apple"></i></a>
-                        <a href="#"><i class="fab fa-spotify"></i></a>
-                        <a href="#"><i class="fab fa-bandcamp"></i></a>
+                        <a href="https://music.apple.com/us/album/law-of-attraction-single/1538396026"><i class="fab fa-apple"></i></a>
+                        <a href="https://open.spotify.com/album/3CyY0zdqKnnjnteq17dqCE"><i class="fab fa-spotify"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section id="videos">
+        <div class="videos-overlay"></div>
         <h2 class="video-heading">Videos</h2>
         <div class="video-container">
-            <img src="assets/sal-video.gif" class="video-gif">
+            <img src="assets/sal-video.gif" class="video-gif" alt="Blunt Video">
             <div class="video-info">
                 <div class="video-info-container">
-                    <h2>Blunt</h2>
+                    <h2>Blunt (Official Video)</h2>
                     <a href="https://www.youtube.com/watch?v=8q2CMCbJuJU">Watch Now</a>
                 </div>
             </div>
         </div>
         <div class="video-container">
-            <img src="assets/law-of-attraction-clip.gif" class="video-gif">
+            <img src="assets/law-of-attraction-clip.gif" class="video-gif" alt="law of attraction video">
             <div class="video-info">
                 <div class="video-info-container">
                     <h2>Law of Attraction</h2>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="video-container">
-            <img src="assets/sal-live.gif" class="video-gif">
+            <img src="assets/sal-live.gif" class="video-gif" alt="saliou live pouring rays">
             <div class="video-info">
                 <div class="video-info-container">
                     <h2>Pouring Rays Live</h2>
@@ -114,6 +114,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>&copy; The Third Pixel and DonoKun 2021</p>
+    </footer>
 </body>
 
 </html>
