replace gifs on mobile with youtube embeds using video mobile container

--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
                 </div>
             </div>
         </div>
+        <div class="video-section-mobile">
+            <div class="video-container-mobile">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8q2CMCbJuJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video-container-mobile">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8q2CMCbJuJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="video-container-mobile">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8q2CMCbJuJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </section>
     <footer>
         <p>&copy; The Third Pixel and DonoKun 2021</p>
