add hover effects to button and achor tags

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
     <section id="music">
         <h2 class="music__heading">
-            Latest Releases
+            Releases
         </h2>
         <div class="music__grid">
             <div class="album">
