--- a/index.html
+++ b/index.html
@@ -119,21 +119,11 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="video-section-mobile">
-            <div class="video-container-mobile">
-                <iframe  src="https://www.youtube.com/embed/8q2CMCbJuJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="video-container-mobile">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wt4T1kZQPh8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="video-container-mobile">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/NdxJUfoyF7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div> -->
     </section>
     <footer>
         <p>&copy; The Third Pixel and DonoKun 2021</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
