--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Musician and fighting game competitor">
+    <meta name="keywords" content="Guitar, musician, street fighter">
     <link rel="stylesheet" href="main.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/426cc04b7a.js" crossorigin="anonymous"></script>
@@ -103,7 +105,7 @@
             </video>
             <div class="video-info">
                 <div class="video-info-container">
-                    <h2>Pouring Rays</h2>
+                    <h2>Law of Attraction</h2>
                     <a href="https://www.youtube.com/watch?v=8q2CMCbJuJU">Watch Now</a>
                 </div>
             </div>
@@ -121,7 +123,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; The Third Pixel and DonoKun 2021</p>
+        <p>&copy; The Third Pixel and <a href="https://twitter.com/_dono_kun" target="_blank" rel="noopener">DonoKun 2021</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
