hide overflow for firefox and move vid info to right for mobile

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; The Third Pixel and <a href="https://twitter.com/_dono_kun" target="_blank" rel="noopener">DonoKun 2021</a></p>
+        <p>&copy; The Third Pixel and DonoKun 2021</p>
     </footer>
     <script src="script.js"></script>
 </body>
