condense folder structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Musician and fighting game competitor">
     <meta name="keywords" content="Guitar, musician, street fighter">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/426cc04b7a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
