change title for SEO

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       href="assets/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Dat Boi Saliou</title>
+    <title>
+      Saliou M'boup | Official website for the musician dat boy Saliou from
+      Venice
+    </title>
   </head>
 
   <body>
